[gd_scene load_steps=2 format=3 uid="uid://c7a75avr38flk"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_k7q3n"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k7q3n")

[node name="Line_Edit_IP_Address" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 161.0
offset_bottom = 34.0
placeholder_text = "IP address"
max_length = 16

[node name="Option_Button_Input_Delay" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 107.0
offset_top = 43.0
offset_right = 162.0
offset_bottom = 74.0
item_count = 10
selected = 0
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 46.0
offset_right = 97.0
offset_bottom = 69.0
text = "Input delay"

[node name="Label_Error" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 212.0
offset_right = 103.0
offset_bottom = 235.0

[node name="Button_Host" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 81.0
offset_right = 83.0
offset_bottom = 137.0
text = "Host"

[node name="Button_Join" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 82.0
offset_right = 165.0
offset_bottom = 138.0
text = "Join"

[node name="Button_Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 145.0
offset_right = 166.0
offset_bottom = 201.0
text = "Quit
"
